--- a/README.yaml
+++ b/README.yaml
@@ -84,7 +84,7 @@ usage: |-
   Full example
   ```hcl
   module "ec2_myserver" {
-    source = "git::https://git.fincore.com/cmp/terraform-aws-ec2-windows-instance.git?ref=master"
+    source = "git::https://github.com/ifunky/terraform-aws-ec2-instance?ref=master"
 
     key_name        = var.my_key
     instance_type   = "t3a.small"
