Fix metadata args

--- a/README.yaml
+++ b/README.yaml
@@ -103,7 +103,7 @@ usage: |-
     namespace       = "ifunky"
     stage           = "dev"
 
-    metadata {
+    metadata_options {
       enabled                 = true
       require_session_tokens  = true # Use metadata service V2
       http_hop_limit          = 1
